--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,5 @@
 {
+  "preset": "ts-jest",
   "testEnvironment": "node",
   "testMatch": ["<rootDir>/test/**/*.test.ts"],
   "testPathIgnorePatterns": ["/node_modules/", "/lib/"],
@@ -16,6 +17,11 @@
       "branches": 0,
       "functions": 90,
       "lines": 90
+    }
+  },
+  "globals": {
+    "ts-jest": {
+      "tsconfig": "tsconfig.test.json"
     }
   }
 }
