--- a/package.json
+++ b/package.json
@@ -16,79 +16,77 @@
     "verify": "yarn audit-with-suppressions && yarn lint && yarn unit-test",
     "unit-test": "jest --coverage test/unit",
     "integration-test": "jest test/integration",
-    "clean": "rm -rf lib docs",
-    "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:declarations && yarn build:docs",
-    "build:transpile": "babel src --out-dir lib --extensions '.ts'",
-    "build:declarations": "tsc --emitDeclarationOnly",
+    "clean": "rm -rf esm lib docs",
+    "build": "yarn codegen && yarn verify && yarn build:transpile && yarn build:docs",
+    "build:transpile": "concurrently \"yarn build:transpile:declarations\" \"yarn build:transpile:cjs\" \"yarn build:transpile:esm\"",
+    "build:transpile:cjs": "tsc --project tsconfig.commonjs.json",
+    "build:transpile:esm": "tsc",
+    "build:transpile:declarations": "tsc --project tsconfig.declarations.json",
     "build:docs": "typedoc --treatWarningsAsErrors --excludePrivate --out docs src/index.ts"
   },
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./cjs/index.js",
+  "types": "./types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "import": "./lib/index.js",
+      "require": "./cjs/index.js",
+      "default": "./lib/index.js"
+    }
+  },
+  "sideEffects": false,
   "files": [
+    "cjs",
     "lib",
-    "docs"
+    "types"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^11.0.0",
-    "@sudoplatform/sudo-common": "^7.0.2",
-    "@sudoplatform/sudo-user": "^11.0.0"
+    "@sudoplatform/sudo-api-client": "^12.0.1",
+    "@sudoplatform/sudo-common": "^8.0.1",
+    "@sudoplatform/sudo-user": "^12.0.2"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.1.7",
     "fp-ts": "^2.12.1",
     "graphql": "^15.8.0",
-    "io-ts": "^2.2.16",
+    "io-ts": "^2.2.17",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "tslib": "^2.4.0"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "@graphql-codegen/**/url-loader/ws": "^7.5.9",
-    "@graphql-codegen/**/normalize-url": "^4.5.1",
-    "**/glob-parent": "^6.0.1",
-    "**/react-devtools-core/ws": "^7.5.9",
-    "**/xmldom": "github:xmldom/xmldom#0.7.0",
-    "**/node-fetch": "^2.6.7",
-    "path-parse": "^1.0.7",
-    "@graphql-codegen/cli/**/ansi-regex": "^5.0.1",
-    "jest/**/tmpl": "^1.0.5",
-    "aws-sdk": "^2.1181.0",
-    "lodash-es": "^4.17.21",
     "minimist": "^1.2.6",
-    "dset": "^3.1.2",
-    "undici": "^5.8.0",
+    "node-fetch": "^2.6.7",
+    "undici": "^5.9.1",
     "got": "^11.8.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-typescript": "^7.18.6",
     "@graphql-codegen/add": "^3.2.0",
     "@graphql-codegen/cli": "^2.9.1",
     "@graphql-codegen/typed-document-node": "^2.3.2",
     "@graphql-codegen/typescript": "^2.7.2",
     "@graphql-codegen/typescript-operations": "^2.5.2",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^11.0.0",
-    "@sudoplatform/sudo-common": "^7.0.2",
-    "@sudoplatform/sudo-entitlements-admin": "^10.0.0",
-    "@sudoplatform/sudo-user": "^11.0.0",
+    "@sudoplatform/sudo-api-client": "^12.0.1",
+    "@sudoplatform/sudo-common": "^8.0.1",
+    "@sudoplatform/sudo-entitlements-admin": "^11.0.2",
+    "@sudoplatform/sudo-user": "^12.0.2",
     "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash": "^4.14.184",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "apollo-client": "^2.6.10",
+    "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-tree-shaking": "^1.10.0",
     "husky": "^8.0.1",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
@@ -105,7 +103,6 @@
       "ansi-regex": 1649985405,
       "glob-parent": 1649985425,
       "normalize-url": 1649985452,
-      "xmldom": 1649985444,
       "graphql": 1649985430,
       "node-fetch": 1649985435,
       "ws": 1649985438
