--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,20 +2,20 @@
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "declaration": true,
+    "declaration": false,
     "downlevelIteration": true,
     "esModuleInterop": true,
     "importHelpers": true,
-    "lib": ["dom", "es2017", "esnext.asynciterable"],
-    "module": "commonjs",
+    "lib": ["DOM", "ES2020"],
+    "module": "ES2020",
     "moduleResolution": "node",
     "outDir": "lib",
     "resolveJsonModule": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2017",
-    "typeRoots": ["./types", "./node_modules/@types"]
+    "target": "ES2020",
+    "typeRoots": ["./typings", "./node_modules/@types"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "types"]
+  "exclude": ["node_modules", "typings"]
 }
