--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.1.9",
-    "fp-ts": "^2.13.1",
+    "fp-ts": "^2.16.0",
     "graphql": "^15.8.0",
     "io-ts": "^2.2.20",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
     "redux": "^4.2.1",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.3"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
@@ -69,19 +69,19 @@
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-operations": "^4.0.0",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^14.0.0",
-    "@sudoplatform/sudo-common": "^8.3.4",
+    "@sudoplatform/sudo-api-client": "^14.0.1",
+    "@sudoplatform/sudo-common": "^8.7.0",
     "@sudoplatform/sudo-entitlements-admin": "^11.2.1",
     "@sudoplatform/sudo-user": "^13.0.2",
     "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.191",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@types/lodash": "^4.14.195",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
     "apollo-client": "^2.6.10",
-    "concurrently": "^8.1.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-tree-shaking": "^1.10.0",
@@ -90,7 +90,7 @@
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.11",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.8",
     "ts-jest": "^27.1.5",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.1",
@@ -107,5 +107,8 @@
       "node-fetch": 1688699011,
       "ts-jest": 1688699012
     }
+  },
+  "auditSuppressions": {
+    "1092278": 1688345806
   }
 }
