--- a/package.json
+++ b/package.json
@@ -48,54 +48,53 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.6",
     "aws-appsync": "^4.1.10",
-    "fp-ts": "^2.16.2",
-    "graphql": "^15.8.0",
+    "fp-ts": "^2.16.8",
+    "graphql": "^15.9.0",
     "io-ts": "^2.2.21",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.3"
   },
   "resolutions": {
     "**/apollo-link": "^1.2.14",
     "**/apollo-cache-inmemory": "^1.6.6",
-    "node-fetch": "^2.7.0",
-    "aws-appsync": "^4.1.10"
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^5.0.2",
+    "@graphql-codegen/add": "^5.0.3",
     "@graphql-codegen/cli": "^5.0.2",
-    "@graphql-codegen/typed-document-node": "^5.0.4",
-    "@graphql-codegen/typescript": "^4.0.4",
-    "@graphql-codegen/typescript-operations": "^4.1.2",
+    "@graphql-codegen/typed-document-node": "^5.0.9",
+    "@graphql-codegen/typescript": "^4.0.9",
+    "@graphql-codegen/typescript-operations": "^4.2.3",
     "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
     "@sudoplatform/sudo-api-client": "^14.0.1",
-    "@sudoplatform/sudo-common": "^8.8.3",
+    "@sudoplatform/sudo-common": "^8.9.1",
     "@sudoplatform/sudo-entitlements-admin": "^11.2.2",
     "@sudoplatform/sudo-user": "^13.1.0",
     "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.14.202",
-    "@types/uuid": "^9.0.8",
+    "@types/lodash": "^4.17.7",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "apollo-client": "^2.6.10",
     "concurrently": "^8.2.2",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-tree-shaking": "^1.12.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-tree-shaking": "^1.12.2",
     "husky": "^8.0.3",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.7.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.3",
     "ts-jest": "^27.1.5",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.25.8",
-    "typescript": "^5.3.3",
-    "uuid": "^9.0.1",
+    "typedoc": "^0.25.13",
+    "typescript": "~5.4.x",
+    "uuid": "^10.0.0",
     "wait-for-expect": "^3.0.2"
   },
   "outdatedSuppressions": {
