--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "prepare": "husky",
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "eslint \"{bin,test,src}/**/*.{js,ts,tsx}\"",
     "lint:prettier": "prettier -l \"{bin,test,src}/**/*.{js,json,jsx,ts,tsx}\"",
     "codegen": "graphql-codegen -c codegen.yml",
-    "verify": "yarn audit-with-suppressions && yarn lint && yarn unit-test",
+    "verify": "./node_modules/.bin/audit-with-suppressions && yarn lint && yarn unit-test",
     "unit-test": "jest --coverage test/unit",
     "integration-test": "jest test/integration",
     "clean": "rm -rf esm lib docs",
@@ -41,72 +40,68 @@
     "types"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-api-client": "^15.0.0",
-    "@sudoplatform/sudo-common": "^10.0.2",
-    "@sudoplatform/sudo-user": "^15.1.1"
+    "@sudoplatform/sudo-common": "^12.2.0"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.6.6",
-    "aws-appsync": "^4.1.10",
-    "fp-ts": "^2.16.9",
-    "graphql": "^15.9.0",
+    "@sudoplatform/sudo-api-client": "^16.0.0",
+    "@sudoplatform/sudo-user": "^16.0.0",
+    "aws-amplify": "^6.15.8",
+    "fp-ts": "^2.16.11",
+    "graphql": "^16.12.0",
     "io-ts": "^2.2.22",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
     "tslib": "^2.8.1"
   },
   "resolutions": {
-    "**/apollo-cache-inmemory": "^1.6.6",
-    "**/micromatch": "^4.0.8",
-    "**/dset": "^3.1.4",
-    "**/cross-spawn": "^7.0.6"
+    "micromatch": "^4.0.8",
+    "dset": "^3.1.4",
+    "cross-spawn": "^7.0.6"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^5.0.3",
-    "@graphql-codegen/cli": "^5.0.3",
-    "@graphql-codegen/typed-document-node": "^5.0.12",
-    "@graphql-codegen/typescript": "^4.1.2",
-    "@graphql-codegen/typescript-operations": "^4.4.0",
-    "@graphql-typed-document-node/apollo-client-2": "^1.0.0",
-    "@sudoplatform/sudo-api-client": "^15.0.0",
-    "@sudoplatform/sudo-common": "^10.0.2",
-    "@sudoplatform/sudo-entitlements-admin": "^12.0.0",
-    "@sudoplatform/sudo-user": "^15.1.1",
+    "@graphql-codegen/add": "^6.0.0",
+    "@graphql-codegen/cli": "^6.0.1",
+    "@graphql-codegen/typed-document-node": "^6.1.0",
+    "@graphql-codegen/typescript": "^5.0.2",
+    "@graphql-codegen/typescript-operations": "^5.0.2",
+    "@sudoplatform/sudo-common": "^12.2.0",
+    "@sudoplatform/sudo-entitlements-admin": "^13.0.0",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^20.17.9",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
-    "apollo-client": "^2.6.10",
-    "concurrently": "^9.1.0",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.19.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "concurrently": "^9.2.1",
+    "dotenv": "^17.2.3",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-tree-shaking": "^1.12.2",
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
-    "prettier": "^3.4.2",
-    "ts-jest": "^29.2.5",
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.4.5",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.27.5",
-    "typescript": "~5.7.x",
-    "uuid": "^11.0.3",
-    "wait-for-expect": "^3.0.2"
-  },
-  "outdatedSuppressions": {
-    "major": {
-      "graphql": 1736991458,
-      "@types/node": 1736991434,
-      "eslint": 1736991474
-    }
+    "typedoc": "^0.28.14",
+    "typescript": "^5.9.3",
+    "uuid": "^11.1.0",
+    "wait-for-expect": "^4.0.0"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
+  },
+  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c",
+  "auditSuppressions": {
+    "1109801": {
+      "until": 1766189911,
+      "untilISO": "2025-12-20T00:18:31Z",
+      "reason": "Waiting for fix"
+    }
   }
 }
