--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "types"
   ],
   "peerDependencies": {
-    "@sudoplatform/sudo-common": "^12.2.0"
+    "@sudoplatform/sudo-api-client": "^16.0.0",
+    "@sudoplatform/sudo-common": "^12.2.0",
+    "@sudoplatform/sudo-user": "^16.0.0"
   },
   "dependencies": {
-    "@sudoplatform/sudo-api-client": "^16.0.0",
-    "@sudoplatform/sudo-user": "^16.0.0",
-    "aws-amplify": "^6.15.8",
+    "aws-amplify": "^6.16.0",
     "fp-ts": "^2.16.11",
     "graphql": "^16.12.0",
     "io-ts": "^2.2.22",
@@ -61,35 +61,37 @@
   },
   "devDependencies": {
     "@graphql-codegen/add": "^6.0.0",
-    "@graphql-codegen/cli": "^6.0.1",
-    "@graphql-codegen/typed-document-node": "^6.1.0",
-    "@graphql-codegen/typescript": "^5.0.2",
-    "@graphql-codegen/typescript-operations": "^5.0.2",
-    "@sudoplatform/sudo-common": "^12.2.0",
-    "@sudoplatform/sudo-entitlements-admin": "^13.0.0",
+    "@graphql-codegen/cli": "^6.1.1",
+    "@graphql-codegen/typed-document-node": "^6.1.5",
+    "@graphql-codegen/typescript": "^5.0.7",
+    "@graphql-codegen/typescript-operations": "^5.0.7",
+    "@sudoplatform/sudo-api-client": "^16.1.1",
+    "@sudoplatform/sudo-common": "^12.2.2",
+    "@sudoplatform/sudo-entitlements-admin": "^13.0.1",
+    "@sudoplatform/sudo-user": "^16.0.2",
     "@types/jest": "^29.5.14",
-    "@types/lodash": "^4.17.20",
-    "@types/node": "^22.19.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
+    "@types/lodash": "^4.17.23",
+    "@types/node": "^22.19.7",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-tree-shaking": "^1.12.2",
     "husky": "^9.1.7",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.23",
     "node-fetch": "^3.3.2",
-    "prettier": "^3.6.2",
-    "ts-jest": "^29.4.5",
+    "prettier": "^3.8.1",
+    "ts-jest": "^29.4.6",
     "ts-mockito": "^2.6.1",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.28.14",
+    "typedoc": "^0.28.16",
     "typescript": "^5.9.3",
     "uuid": "^11.1.0",
     "wait-for-expect": "^4.0.0"
@@ -103,11 +105,6 @@
       "until": 1771048640,
       "untilISO": "2026-02-14T05:57:20Z",
       "reason": "Waiting for patch in @smithy/config-resolver"
-    },
-    "1112148": {
-      "until": 1771048656,
-      "untilISO": "2026-02-14T05:57:36Z",
-      "reason": "Waiting for patch in diff"
     }
   }
 }
